{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 85,
  "lineage": "4f545258-cbf0-3c19-3131-43e4e9b4b3c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vishnu_terraform_bastion_eip_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f406dcb434870bac",
            "arn": "arn:aws:ec2:ap-south-1:782208973532:elastic-ip/eipalloc-0f406dcb434870bac",
            "association_id": "eipassoc-06523d60a8dc0c610",
            "domain": "vpc",
            "id": "eipalloc-0f406dcb434870bac",
            "instance": "i-003af9461832d847b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e17eaa9ca0f3641b",
            "private_dns": "ip-10-30-1-141.ap-south-1.compute.internal",
            "private_ip": "10.30.1.141",
            "public_dns": "ec2-3-7-129-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.129.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vishnu_terraform_bastion_eip_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_bastion_eip_ror"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.vishnu_terraform_bastion_ror",
            "aws_security_group.vishnu_terraform_sg_bastion_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vishnu_terraform_nat_eip_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df088da49f83b504",
            "arn": "arn:aws:ec2:ap-south-1:782208973532:elastic-ip/eipalloc-0df088da49f83b504",
            "association_id": "eipassoc-08a2888b40fe3c1ae",
            "domain": "vpc",
            "id": "eipalloc-0df088da49f83b504",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02501ad7b32c10134",
            "private_dns": "ip-10-30-1-77.ap-south-1.compute.internal",
            "private_ip": "10.30.1.77",
            "public_dns": "ec2-13-235-224-16.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.224.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vishnu_terraform_nat_eip_ror_1"
            },
            "tags_all": {
              "Name": "vishnu_terraform_nat_eip_ror_1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c18b1c96af682d9c",
            "arn": "arn:aws:ec2:ap-south-1:782208973532:elastic-ip/eipalloc-0c18b1c96af682d9c",
            "association_id": "eipassoc-0a7088dfa1c86ad9a",
            "domain": "vpc",
            "id": "eipalloc-0c18b1c96af682d9c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07d7daad06a5f916e",
            "private_dns": "ip-10-30-2-105.ap-south-1.compute.internal",
            "private_ip": "10.30.2.105",
            "public_dns": "ec2-35-154-109-190.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.109.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vishnu_terraform_nat_eip_ror_2"
            },
            "tags_all": {
              "Name": "vishnu_terraform_nat_eip_ror_2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vishnu_terraform_app_ec2_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e31019d5c730de7",
            "arn": "arn:aws:ec2:ap-south-1:782208973532:instance/i-0da981a1150833552",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vishnu_terraform_ec2_ecs_profile_ror",
            "id": "i-0da981a1150833552",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4155e2f32f05f6f",
            "private_dns": "ip-10-30-3-221.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.3.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:782208973532:key/408dcf9c-1791-44f4-8cb7-970ef3e600b7",
                "throughput": 125,
                "volume_id": "vol-06b3f8b6bad0f109d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff730b0ed4d5061e",
            "tags": {
              "Name": "vishnu_terraform_app_ec2_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_app_ec2_ror"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdbe04bf9d952d22"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.vishnu_terraform_ec2_ecs_profile_ror",
            "aws_iam_role.vishnu_terraform_ec2_ecs_role_ror",
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_security_group.vishnu_terraform_sg_bastion_ror",
            "aws_security_group.vishnu_terraform_sg_ecs_ror",
            "aws_subnet.vishnu_terraform_private_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vishnu_terraform_bastion_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e31019d5c730de7",
            "arn": "arn:aws:ec2:ap-south-1:782208973532:instance/i-003af9461832d847b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003af9461832d847b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vishnu-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e17eaa9ca0f3641b",
            "private_dns": "ip-10-30-1-141.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.141",
            "public_dns": "ec2-3-7-129-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.129.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:782208973532:key/408dcf9c-1791-44f4-8cb7-970ef3e600b7",
                "throughput": 125,
                "volume_id": "vol-02cad4c905ac5337f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0003a1330a1d6a963",
            "tags": {
              "Name": "vishnu_terraform_bastion_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_bastion_ror"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094756790fa1b9634"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vishnu_terraform_sg_bastion_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vishnu_terraform_igw_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:internet-gateway/igw-0a0026ad49aeed279",
            "id": "igw-0a0026ad49aeed279",
            "owner_id": "782208973532",
            "tags": {
              "Name": "vishnu_terraform_igw_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_igw_ror"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vishnu_terraform_alb_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:loadbalancer/app/vishnu-terraform-alb-ror/5ab536df0ee6e498",
            "arn_suffix": "app/vishnu-terraform-alb-ror/5ab536df0ee6e498",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vishnu-terraform-alb-ror-1195332563.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:loadbalancer/app/vishnu-terraform-alb-ror/5ab536df0ee6e498",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vishnu-terraform-alb-ror",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03cb855d37f4fd24f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0003a1330a1d6a963"
              },
              {
                "subnet_id": "subnet-0084bf86369833adb"
              }
            ],
            "subnets": [
              "subnet-0003a1330a1d6a963",
              "subnet-0084bf86369833adb"
            ],
            "tags": {
              "Name": "vishnu_terraform_alb_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_alb_ror"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vishnu_terraform_http_listener_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/23c05eae00c2ad40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/23c05eae00c2ad40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:loadbalancer/app/vishnu-terraform-alb-ror/5ab536df0ee6e498",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "vishnu_terraform_http_listener_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_http_listener_ror"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.vishnu_terraform_alb_ror",
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vishnu_terraform_https_listener_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/36eec19792828db2",
            "certificate_arn": "arn:aws:acm:ap-south-1:782208973532:certificate/348e9f5e-6a42-4dc6-b428-fafa0f031d66",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-ror/d8c4e310cd9481f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/36eec19792828db2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:loadbalancer/app/vishnu-terraform-alb-ror/5ab536df0ee6e498",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Name": "vishnu_terraform_https_listener_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_https_listener_ror"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.vishnu_terraform_alb_ror",
            "aws_lb_target_group.vishnu_terraform_tg_ror",
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "vishnu_terraform_php_rule_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-php/cce6c04d5a808c30",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener-rule/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/36eec19792828db2/a0cbf33921ac3786",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "food.vichubro.online"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener-rule/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/36eec19792828db2/a0cbf33921ac3786",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:listener/app/vishnu-terraform-alb-ror/5ab536df0ee6e498/36eec19792828db2",
            "priority": 10,
            "tags": {
              "Name": "vishnu_terraform_php_rule_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_php_rule_ror"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.vishnu_terraform_alb_ror",
            "aws_lb_listener.vishnu_terraform_https_listener_ror",
            "aws_lb_target_group.vishnu_terraform_tg_php",
            "aws_lb_target_group.vishnu_terraform_tg_ror",
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vishnu_terraform_tg_php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-php/cce6c04d5a808c30",
            "arn_suffix": "targetgroup/vishnu-terraform-tg-php/cce6c04d5a808c30",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-php/cce6c04d5a808c30",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vishnu-terraform-tg-php",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vishnu_terraform_tg_php"
            },
            "tags_all": {
              "Name": "vishnu_terraform_tg_php"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vishnu_terraform_tg_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-ror/d8c4e310cd9481f1",
            "arn_suffix": "targetgroup/vishnu-terraform-tg-ror/d8c4e310cd9481f1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:782208973532:targetgroup/vishnu-terraform-tg-ror/d8c4e310cd9481f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vishnu-terraform-tg-ror",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vishnu_terraform_tg_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_tg_ror"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vishnu_terraform_nat_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df088da49f83b504",
            "association_id": "eipassoc-08a2888b40fe3c1ae",
            "connectivity_type": "public",
            "id": "nat-0a122c9b1e65cdd4e",
            "network_interface_id": "eni-02501ad7b32c10134",
            "private_ip": "10.30.1.77",
            "public_ip": "13.235.224.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0003a1330a1d6a963",
            "tags": {
              "Name": "vishnu_terraform_nat_ror_1"
            },
            "tags_all": {
              "Name": "vishnu_terraform_nat_ror_1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c18b1c96af682d9c",
            "association_id": "eipassoc-0a7088dfa1c86ad9a",
            "connectivity_type": "public",
            "id": "nat-0eea15c353b851ba7",
            "network_interface_id": "eni-07d7daad06a5f916e",
            "private_ip": "10.30.2.105",
            "public_ip": "35.154.109.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0084bf86369833adb",
            "tags": {
              "Name": "vishnu_terraform_nat_ror_2"
            },
            "tags_all": {
              "Name": "vishnu_terraform_nat_ror_2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "vishnu_terraform_private_nacl_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:network-acl/acl-0995d7c5c81051dd2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0995d7c5c81051dd2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "782208973532",
            "subnet_ids": [
              "subnet-075d95922fccde2bc",
              "subnet-0ff730b0ed4d5061e"
            ],
            "tags": {
              "Name": "vishnu_terraform_private_nacl_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_private_nacl_ror"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.vishnu_terraform_private_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "vishnu_terraform_public_nacl_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:network-acl/acl-0ad0d7bf840867ca1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad0d7bf840867ca1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "782208973532",
            "subnet_ids": [
              "subnet-0003a1330a1d6a963",
              "subnet-0084bf86369833adb"
            ],
            "tags": {
              "Name": "vishnu_terraform_public_nacl_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_public_nacl_ror"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vishnu_terraform_private_rt_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:route-table/rtb-00cca2173f4d303ac",
            "id": "rtb-00cca2173f4d303ac",
            "owner_id": "782208973532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a122c9b1e65cdd4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vishnu_terraform_private_rt_ror_1"
            },
            "tags_all": {
              "Name": "vishnu_terraform_private_rt_ror_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_nat_gateway.vishnu_terraform_nat_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:route-table/rtb-03c4347f4fd727755",
            "id": "rtb-03c4347f4fd727755",
            "owner_id": "782208973532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eea15c353b851ba7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vishnu_terraform_private_rt_ror_2"
            },
            "tags_all": {
              "Name": "vishnu_terraform_private_rt_ror_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_nat_gateway.vishnu_terraform_nat_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vishnu_terraform_public_rt_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:route-table/rtb-0688ea0143a9f603b",
            "id": "rtb-0688ea0143a9f603b",
            "owner_id": "782208973532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0026ad49aeed279",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vishnu_terraform_public_rt_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_public_rt_ror"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vishnu_terraform_private_rta_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0884b59cd33391d0b",
            "route_table_id": "rtb-00cca2173f4d303ac",
            "subnet_id": "subnet-0ff730b0ed4d5061e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_nat_gateway.vishnu_terraform_nat_ror",
            "aws_route_table.vishnu_terraform_private_rt_ror",
            "aws_subnet.vishnu_terraform_private_subnet_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e1d476b8ba3bde1",
            "route_table_id": "rtb-03c4347f4fd727755",
            "subnet_id": "subnet-075d95922fccde2bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vishnu_terraform_nat_eip_ror",
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_nat_gateway.vishnu_terraform_nat_ror",
            "aws_route_table.vishnu_terraform_private_rt_ror",
            "aws_subnet.vishnu_terraform_private_subnet_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vishnu_terraform_public_rta_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc09de5f37927c0",
            "route_table_id": "rtb-0688ea0143a9f603b",
            "subnet_id": "subnet-0003a1330a1d6a963"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_route_table.vishnu_terraform_public_rt_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d1b6b402cc4ae6",
            "route_table_id": "rtb-0688ea0143a9f603b",
            "subnet_id": "subnet-0084bf86369833adb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vishnu_terraform_igw_ror",
            "aws_route_table.vishnu_terraform_public_rt_ror",
            "aws_subnet.vishnu_terraform_public_subnet_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vishnu_terraform_sg_alb_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:security-group/sg-03cb855d37f4fd24f",
            "description": "Allow HTTP and HTTPS inbound to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cb855d37f4fd24f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vishnu_terraform_sg_alb_ror",
            "name_prefix": "",
            "owner_id": "782208973532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vishnu_terraform_sg_alb_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_sg_alb_ror"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vishnu_terraform_sg_bastion_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:security-group/sg-094756790fa1b9634",
            "description": "SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094756790fa1b9634",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vishnu_terraform_sg_bastion_ror",
            "name_prefix": "",
            "owner_id": "782208973532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vishnu_terraform_sg_bastion_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_sg_bastion_ror"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vishnu_terraform_sg_ecs_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:security-group/sg-0cdbe04bf9d952d22",
            "description": "Allow traffic from ALB to ECS tasks on dynamic port range",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdbe04bf9d952d22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Dynamic ports from ALB",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cb855d37f4fd24f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "PHP/Apache app port from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cb855d37f4fd24f"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "RoR app port from ALB (Puma)",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cb855d37f4fd24f"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094756790fa1b9634"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vishnu_terraform_sg_ecs_ror",
            "name_prefix": "",
            "owner_id": "782208973532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vishnu_terraform_sg_ecs_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_sg_ecs_ror"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_security_group.vishnu_terraform_sg_bastion_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vishnu_terraform_sg_rds_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:security-group/sg-0cbba60c52b872208",
            "description": "Allow MySQL access from ECS tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbba60c52b872208",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cdbe04bf9d952d22"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094756790fa1b9634"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "vishnu_terraform_sg_rds_ror",
            "name_prefix": "",
            "owner_id": "782208973532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vishnu_terraform_sg_rds_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_sg_rds_ror"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vishnu_terraform_sg_alb_ror",
            "aws_security_group.vishnu_terraform_sg_bastion_ror",
            "aws_security_group.vishnu_terraform_sg_ecs_ror",
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vishnu_terraform_private_subnet_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:subnet/subnet-0ff730b0ed4d5061e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff730b0ed4d5061e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782208973532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vishnu_terraform_private_subnet_ror_1"
            },
            "tags_all": {
              "Name": "vishnu_terraform_private_subnet_ror_1"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:subnet/subnet-075d95922fccde2bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.30.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d95922fccde2bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782208973532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vishnu_terraform_private_subnet_ror_2"
            },
            "tags_all": {
              "Name": "vishnu_terraform_private_subnet_ror_2"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vishnu_terraform_public_subnet_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:subnet/subnet-0003a1330a1d6a963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0003a1330a1d6a963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782208973532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vishnu_terraform_public_subnet_ror_1"
            },
            "tags_all": {
              "Name": "vishnu_terraform_public_subnet_ror_1"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:subnet/subnet-0084bf86369833adb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084bf86369833adb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782208973532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vishnu_terraform_public_subnet_ror_2"
            },
            "tags_all": {
              "Name": "vishnu_terraform_public_subnet_ror_2"
            },
            "vpc_id": "vpc-05d7439bb90bbc1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vishnu_terraform_vpc_ror"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vishnu_terraform_vpc_ror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782208973532:vpc/vpc-05d7439bb90bbc1bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-02facb296fd0ba09e",
            "default_route_table_id": "rtb-0b3374f3d585e861c",
            "default_security_group_id": "sg-0e773e4833a48d58e",
            "dhcp_options_id": "dopt-097ec9bd38f6b05a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d7439bb90bbc1bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3374f3d585e861c",
            "owner_id": "782208973532",
            "tags": {
              "Name": "vishnu_terraform_vpc_ror"
            },
            "tags_all": {
              "Name": "vishnu_terraform_vpc_ror"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}